1999-08-25  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: handle 225 and 226 replies in TransferCheck.
	* Http.cc: use cwd in error message if file=="".

1999-08-24  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: reset try_time on certain failures: greeting, user,
	  pass, to sleep proper time before reconnect.

1999-08-21  Alexander V. Lukyanov  <lav@yars.free.net>

	* HttpDir.cc: improve support for squid's ftp listings;
	  support symlinks.
	* Makefile.am: cmd-sleep.so target; use -nostdlib to reduce size,
	  this works unless there are static constructors.
	* SleepJob.cc, commands.cc: move at and sleep commands to SleepJob.cc
	  to allow modularity.
	* modconfig.h: add MODULE_CMD_SLEEP.

1999-08-20  Alexander V. Lukyanov  <lav@yars.free.net>

	* module.c: provide module aliases.
	* FileAccess.cc: revert last change.

1999-08-20  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc, Http.h, HttpDir.cc: implement hftp protocol (ftp over http);
	  parse squid's ftp listings.
	* FileAccess.cc: load proto-http when hftp is requested.
	* resource.cc: hftp resources added; set ftp:proxy if environment
	  variable ftp_proxy points to ftp proxy.

1999-08-18  Alexander V. Lukyanov  <lav@yars.free.net>

	* buffer.h, buffer.cc: allow saving data; (Save, GetSaved) new methods.
	* HttpDir.cc, HttpDir.h, FtpDirList.cc, FtpDirList.h: save data in
	  Buffer ubuf, members (upos, from_cache) become obsolete.

1999-08-18  Jim Pick <jim@jimpick.com>

	* LsCache.h, FtpDirList.cc, FtpDirList.h: don't try to cache
	  anything if cache is off; don't cache too large objects (by lav)

1999-08-18  Alexander V. Lukyanov  <lav@yars.free.net>

	* complete.cc: local completion after redirection.

1999-08-17  Alexander V. Lukyanov  <lav@yars.free.net>

	* Job.cc, Job.h: provide useful default ShowRunStatus method.
	  (e.g. helps `at' command)

1999-08-16  Alexander V. Lukyanov  <lav@yars.free.net>

	* ArgV.cc, ArgV.h: make several methods const.